--- a/Klassni_rukovodilel'.csproj
+++ b/Klassni_rukovodilel'.csproj
@@ -47,11 +47,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClassIniDatabase.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="FormAuto.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FormAuto.Designer.cs">
+      <DependentUpon>FormAuto.cs</DependentUpon>
     </Compile>
     <Compile Include="FormReg.cs">
       <SubType>Form</SubType>
@@ -295,8 +295,8 @@
     <Compile Include="инструкции\FormZhurnal.Designer.cs">
       <DependentUpon>FormZhurnal.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="FormAuto.resx">
+      <DependentUpon>FormAuto.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormMenu.resx">
       <DependentUpon>FormMenu.cs</DependentUpon>
